Making sound the page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <!-- 🎵 Background Music (Auto-Play Without Restrictions) -->
-    <audio autoplay loop>
-        <source src="/assets/sounds/nature.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <audio id="backgroundMusic" autoplay loop muted>
+  <source src="assets/sounds/nature.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
 
     <div class="container">
         <h1>🌸 Digital Garden 🌿</h1>
