--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Garden 🌿</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/sketch.js"></script>
 </head>
 <body>
-    <!-- 🎵 Background Music (Auto-Play Without Restrictions) -->
-    <audio id="backgroundMusic" autoplay loop muted>
-  <source src="assets/sounds/nature.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
+    <audio id="backgroundMusic" autoplay loop>
+        <source src="assets/sounds/nature.mp3" type="audio/mpeg" />
+        Your browser does not support the audio element.
+      </audio>
+      
 
 
     <div class="container">
@@ -22,6 +23,6 @@
         <p id="statusMessage"></p> <!-- Will update dynamically -->
     </div>
 
-    <script src="js/sketch.js"></script>
+    
 </body>
 </html>
