--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <!-- Fondo animado con hojas -->
   <img src="assets/image/leaf-falling.gif" class="hojas" alt="Hojas cayendo" />
 
+  <img src="assets/image/rose.png" class="background-pixel" alt="background pixel" />
+
+
   <!-- Estanque animado
   <img src="assets/image/agua.gif" class="agua" alt="Agua animada" /> -->
 
@@ -25,7 +28,7 @@
 
   <!-- Contenido principal -->
   <div class="container">
-    <h1>🌸 Digital Garden 🌿</h1>
+    <h1>Digital Garden</h1>
     <p>Type a word and press Enter to grow a new plant.</p>
     <input type="text" id="wordInput" placeholder="Type here..." />
     <p id="statusMessage"></p>
