✨Modify assets and adding some styles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="A relaxing pixel-art Digital Garden 🌸 — grow your own plants by typing their names and watch your garden bloom with daisy, tulip, rose, and more. Created by Teshi using p5.js.">
   <title>Digital Garden 🌿</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
@@ -40,6 +41,34 @@
     <button id="resetButton">Reset Garden</button>
 
   </div>
+
+  <section class="plot-grid" id="plotGrid">
+    <div class="plot" data-index="0"></div>
+    <div class="plot" data-index="1"></div>
+    <div class="plot" data-index="2"></div>
+    <div class="plot" data-index="3"></div>
+    <div class="plot" data-index="4"></div>
+    <div class="plot" data-index="5"></div>
+    <div class="plot" data-index="6"></div>
+    <div class="plot" data-index="7"></div>
+    <div class="plot" data-index="8"></div>
+  </section>
+  
+  
+  <footer class="site-footer">
+    <p>🌸 Built with love by <strong>Teshi</strong></p>
+    <div class="footer-links">
+      <a href="https://github.com/teshidesu" target="_blank" aria-label="GitHub" title="GitHub">
+        <img src="/assets/image/github-mark.png" alt="GitHub logo" />
+      </a>
+      <a href="https://twitter.com/teshidesu23" target="_blank" aria-label="Twitter" title="Twitter">
+        <img src="/assets/image/x.png" alt="Twitter logo" />
+      </a>
+      <a href="https://www.codedex.io/@teshi-desu" target="_blank" aria-label="Codedex" title="Codedex">
+        <img src="/assets/image/pot2.png" alt="Codedex logo" />
+      </a>
+    </div>
+  </footer>
   
   
 
