--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="A relaxing pixel-art Digital Garden 🌸 — grow your own plants by typing their names and watch your garden bloom with daisy, tulip, rose, and more. Created by Teshi using p5.js.">
   <title>Digital Garden 🌿</title>
   <link rel="stylesheet" href="css/styles.css" />
+  <link rel="shortcut icon" href="/assets/image/pot2.png" type="image/x-icon">
 </head>
 <body>
   <!-- Música de fondo -->
