--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <img src="assets/image/rose.png" class="background-pixel" alt="background pixel" />
 
-
+<main class="main-layout">
   <div class="container">
     <h1>Digital Garden</h1>
     <p>Type a word and press Enter to grow a new plant.</p>
@@ -33,11 +33,16 @@
       <ul>
         <li><code>daisy</code></li>
         <li><code>rose</code></li>
-        <li><code>tulip</code></li>
-        <li><code>violet</code></li>
         <li><code>sunflower</code></li>
+        <li><code>tomato</code></li>
+        <li><code>carrot</code></li>
+        <li><code>lettuce</code></li>
+        <li><code>corn</code></li>
+        <li><code>watermelon</code></li>
+        <li><code>pumpkin</code></li>
       </ul>
     </div>
+    
 
     <button id="resetButton">Reset Garden</button>
 
@@ -55,6 +60,8 @@
     <div class="plot" data-index="8"></div>
   </section>
   
+</main>
+
   
   <footer class="site-footer">
     <p>🌸 Built with love by <strong>Teshi</strong></p>
