--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 <body>
   <!-- Música de fondo -->
-  <audio id="backgroundMusic" autoplay loop>
-    <source src="/assets/sounds/nature.mp3" type="audio/mpeg" />
+  <audio id="backgroundMusic" loop>
+    <source src="assets/sounds/nature.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
+  
 
   <!-- Fondo animado con hojas -->
   <img src="assets/image/leaf-falling.gif" class="hojas" alt="Hojas cayendo" />
